# SillyTavernLauncher

./: .gitignore  NuitkaBuild.bat  NuitkaBuild_with_venv.bat  NuitkaDebugBuild.bat  NuitkaDebugBuild_with_venv.bat  README.md  build.bat  debugbuild.bat  pyproject.toml  requirements.txt  setup_venv.bat
.github/workflows/: main.yml
src/: config.json  config.py  data_sync_manager.py  env.py  event.py  git_utils.py  main.py  network.py  st_version_manager.py  st_version_ui.py  stconfig.py  sync_client.py  sync_server.py  sync_ui.py  sysenv.py  terminal.py  tray.py  ui.py  update.py  version.py  welcome_dialog.py
src/config/: config_manager.py
src/core/: event.py  git_utils.py  lifecycle.py  network.py  terminal.py
src/features/agreement/: __init__.py  fetcher.py
src/features/extensions/: extension_manager.py  extension_page.py
src/features/st/: config.py  version_manager.py
src/features/st/ui/: version_ui.py
src/features/sync/: client.py  manager.py  server.py
src/features/system/: env.py
src/features/tray/: tray.py
src/features/update/: checker.py
src/ui/: main_ui.py
src/ui/components/: sync_ui.py
src/ui/dialogs/: agreement_dialog.py  first_start_dialog.py  host_whitelist_dialog.py  install_confirm_dialog.py  ip_whitelist_dialog.py  welcome_dialog.py
src/utils/: logger.py
