[project]
name = "sillytavernlauncher"
version = "1.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "LingyeSoul", email = "lingyesoul@qq.com" }
]
dependencies = [
  "flet==0.28.3",
  "packaging>=21.0",
  "ruamel.yaml>=0.18.13"
]

[tool.flet.app.boot_screen]
show = true
message = "正在进行初始化"

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "sillytavernlauncher"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}